Add unit and Testcontainers integration tests, plus CI and release workflows